<resources>
    <string name="app_name">messenger</string>
    <string name="title_activity_messages">MessagesActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="messages">Сообщения</string>
    <string name="contacts">Контакты</string>
    <string name="exit">Выход</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enterThePhoneNumber">Введите номер телефона:</string>
    <string name="enter">Войти</string>
    <string name="title_activity_enter_code">EnterCodeActivity</string>
    <string name="code">Код</string>
    <string name="enterName">Введите имя:</string>
    <string name="name">Имя</string>
    <string name="dialogs">Диалоги</string>
    <string name="profile">Профиль</string>
    <string name="photo">Фото</string>
    <string name="enterText">Введите текст</string>
    <string name="create_dialog">Создать диалог</string>
    <string name="enterTitle">Введите название:</string>

    <string-array name="profile_strings">
        <item>Заменить фотографию</item>
        <item>Сменить имя</item>
        <item>Уведомления</item>
    </string-array>

    <string-array name="editImage_strings">
        <item>Загрузить из галереи</item>
        <item>Сделать снимок</item>
        <item>Удалить фото</item>
    </string-array>

    <string-array name="editDialogSettings_strings">
        <item>Сменить аватарку</item>
        <item>Сменить имя</item>
        <item>Уведомления</item>
    </string-array>
</resources>
