<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_black_48dp"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_black_48dp"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="Настройки" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_48dp"
            android:title="@string/exit" />
    </group>
</menu>
