<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nanziq.messenger.SignInActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterThePhoneNumber"
        android:id="@+id/labelEnterPhone" />

    <com.github.reinaldoarrosi.maskededittext.MaskedEditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:mask="+9 (999) 999-99-99"
        app:placeholder="_"
        android:layout_below="@+id/labelEnterPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelEnterPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/inputCodeLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            android:inputType="phone"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/phoneNumber"
        android:layout_centerHorizontal="true"
        android:text="@string/enter"/>

</RelativeLayout>
